[2.93-A] Composite Node Output completely black, Viewer Node working from the same data. #86836

Closed
opened 2021-03-22 21:29:07 +01:00 by Rafael · 16 comments

System Information
Operating system: Windows 10
Graphics card: GTX 1050 TI Overclocked (Second Hand GPU)

Blender Version
Broken: 2.93 Alpha (Date: 2021-03-19 21:37, Branch: master)
Worked: 2.93 Alpha, Local Compilation from Source Code (Date: 2021-03-18, Commit: 51c7ff9222) <-- Tested on Friend's Computer

Description :
While working on a 3D model i wanted to Render a 8k shot, after a complete rendering Compositing started. Once done it gave me a "Black Silhouette" of what i rendered.

On this image you can see the Black Silhouette, the issue only happens on composite node's ouput, viewer node ouput works perfectly.
image.png

This image illustrate my current Compositing Setup
image.png

Exact steps for others to reproduce the error :
Setup a scene - in my case it's few objects, textures, compositing nodes with two output (one normal, one watermarked) - render 8k and wait for Compositing.

Due to Not-To-Share Models i'm not allowed to share my Blend File.

**System Information** Operating system: Windows 10 Graphics card: GTX 1050 TI Overclocked (Second Hand GPU) **Blender Version** Broken: 2.93 Alpha (Date: 2021-03-19 21:37, Branch: master) Worked: 2.93 Alpha, Local Compilation from Source Code (Date: 2021-03-18, Commit: 51c7ff9222c362e03d07aba0ebbffd9d52fc9d3b) <-- Tested on Friend's Computer **Description :** While working on a 3D model i wanted to Render a 8k shot, after a complete rendering Compositing started. Once done it gave me a "Black Silhouette" of what i rendered. On this image you can see the Black Silhouette, the issue only happens on composite node's ouput, viewer node ouput works perfectly. ![image.png](https://archive.blender.org/developer/F9904547/image.png) This image illustrate my current Compositing Setup ![image.png](https://archive.blender.org/developer/F9904556/image.png) **Exact steps for others to reproduce the error :** Setup a scene - in my case it's few objects, textures, compositing nodes with two output (one normal, one watermarked) - render 8k and wait for Compositing. Due to Not-To-Share Models i'm not allowed to share my Blend File.
Author

Added subscriber: @Aels-224

Added subscriber: @Aels-224
Author

Additional Information.

Turned OptiX Denoising off and didn't got a Black Silhouette on Composite Node output.

I am currently checking to see if it has been reactivated to determine if it was a one-time problem.

Additional Information. Turned OptiX Denoising off and didn't got a Black Silhouette on Composite Node output. I am currently checking to see if it has been reactivated to determine if it was a one-time problem.
Author

I am currently checking to see if it has been reactivated to determine if it was a one-time problem.

It seems that everything is back to normal when re-enabling OptiX denoising and re-rendering, which seems to be a one-time problem.

> I am currently checking to see if it has been reactivated to determine if it was a one-time problem. It seems that everything is back to normal when re-enabling OptiX denoising and re-rendering, which seems to be a one-time problem.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

If this one-time problem is reproducable, then it would still be good to have a look at this.
However, we would still need a .blend file with this particular setup (models can be replaced with simple geometry), this just ensure we are all on the same page.

If this one-time problem is reproducable, then it would still be good to have a look at this. However, we would still need a .blend file with this particular setup (models can be replaced with simple geometry), this just ensure we are all on the same page.
Author

Greetings @lichtwerk , I haven't managed to reproduce this particular issue but I think I found a possible cause, I'm no expert so pardon me if I'm off.

While trying to reproduce it, I got this result when doing the previously mentioned steps.
Also, during the night — between my report and now — a friend tried to reproduce my issue and got almost what I just got, visually not identical tho it comes from the same compositing setup.

His theory and now mine is that multiple Composite and Viewer node — even if disable — might interact in a wrong way on to what is outputted.

Here's a clip of his side, note that he is on 2.92 (version on which the "Black Silhouette" issue also happened to me in the past).
https://cdn.discordapp.com/attachments/555448292087955456/823768556474073178/qrU850mZZo.mp4

Here's my mentionned result.
image.png
On my picture both Render Result and Viewer Node images should be identical, that said it seems that Composite and Viewer node seem to keep some kind of active status when duplicated, even if not "active" by clicking on them.
I say should since technically both Composite and Viewer node should output the non-watermark picture since the active ones are both linked to the Glare node.

Here's the Blend file, it's the one i used for the picture above
untitled.blend

In hope that it helps, don't hesitate to ask more and please pardon any delay or typos.

Greetings @lichtwerk , I haven't managed to reproduce this particular issue but I think I found a possible cause, I'm no expert so pardon me if I'm off. While trying to reproduce it, I got this result when doing the previously mentioned steps. Also, during the night — between my report and now — a friend tried to reproduce my issue and got almost what I just got, visually not identical tho it comes from the same compositing setup. His theory and now mine is that multiple Composite and Viewer node — even if disable — might interact in a wrong way on to what is outputted. Here's a clip of his side, note that he is on 2.92 (version on which the "Black Silhouette" issue also happened to me in the past). https://cdn.discordapp.com/attachments/555448292087955456/823768556474073178/qrU850mZZo.mp4 Here's my mentionned result. ![image.png](https://archive.blender.org/developer/F9905327/image.png) On my picture both Render Result and Viewer Node images should be identical, that said it seems that Composite and Viewer node seem to keep some kind of active status when duplicated, even if not "active" by clicking on them. I say should since technically both Composite and Viewer node should output the non-watermark picture since the active ones are both linked to the Glare node. Here's the Blend file, it's the one i used for the picture above [untitled.blend](https://archive.blender.org/developer/F9905331/untitled.blend) In hope that it helps, don't hesitate to ask more and please pardon any delay or typos.
Member

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

I have been able to reproduce the issue of the non-active render node being the one that appears in the Image Editor, but only the first time after I copied it. After that, it worked as expected. I don't feel that I have the right steps that are reproducible yet to be able to confirm.

I have been able to reproduce the issue of the non-active render node being the one that appears in the Image Editor, but only the first time after I copied it. After that, it worked as expected. I don't feel that I have the right steps that are reproducible yet to be able to confirm.
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

The composite node ignores its active status and overrides the previous active node, while the order is not defined.
In convert_to_operation, it should be:

lang=diff
-  bool is_active = (editor_node->flag & NODE_DO_OUTPUT_RECALC) || context.is_rendering();
+  bool is_active = ((editor_node->flag & NODE_DO_OUTPUT_RECALC) || context.is_rendering()) &&
+                   (editor_node->flag & NODE_DO_OUTPUT);
The composite node ignores its active status and overrides the previous active node, while the order is not defined. In `convert_to_operation`, it should be: ``` lang=diff - bool is_active = (editor_node->flag & NODE_DO_OUTPUT_RECALC) || context.is_rendering(); + bool is_active = ((editor_node->flag & NODE_DO_OUTPUT_RECALC) || context.is_rendering()) && + (editor_node->flag & NODE_DO_OUTPUT); ```
Philipp Oeser removed the
Interest
VFX & Video
label 2023-02-10 09:31:49 +01:00
Sergey Sharybin added
Type
Bug
and removed
Type
Report
labels 2023-02-23 17:09:43 +01:00

@Jeroen-Bakker The code proposed from Omar seems reasonable. Do you want to have a second look or we just commit the change? :)

@Jeroen-Bakker The code proposed from Omar seems reasonable. Do you want to have a second look or we just commit the change? :)
Member

Yes, can be committed.

Yes, can be committed.
Jeroen Bakker self-assigned this 2023-02-27 08:50:29 +01:00
Jeroen Bakker added this to the Compositing project 2023-02-27 08:50:40 +01:00
Jeroen Bakker added this to the 3.5 milestone 2023-02-27 08:50:45 +01:00
Member

I will assign to me to land the fix.

I will assign to me to land the fix.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-27 12:58:40 +01:00
Sergey Sharybin removed this from the Compositing project 2023-07-06 14:26:15 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86836
No description provided.