source/blender/compositor/nodes/COM_SplitViewerNode.cc
@@ -17,7 +17,7 @@ void SplitViewerNode::convert_to_operations(NodeConverter &converter,
                                             const CompositorContext &context) const
 {
   const bNode *editor_node = this->get_bnode();
-  bool do_output = (editor_node->flag & NODE_DO_OUTPUT_RECALC || context.is_rendering()) &&
+  bool is_active = (editor_node->flag & NODE_DO_OUTPUT_RECALC || context.is_rendering()) &&
                    (editor_node->flag & NODE_DO_OUTPUT);
 
   NodeInput *image1Socket = this->get_input_socket(0);
@@ -54,7 +54,7 @@ void SplitViewerNode::convert_to_operations(NodeConverter &converter,
 
   converter.add_preview(split_viewer_operation->get_output_socket());
 
-  if (do_output) {
+  if (is_active) {
     converter.register_viewer(viewer_operation);
   }
 }
